--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["src/*"]
-		}
-	}
+		},
+		"sourceMap": true,
+	},
+	"include": ["src/**/*.js", "src/*/*.vue"],
 }
