--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
 		},
 		"sourceMap": true,
 	},
-	"include": ["src/**/*.js", "src/*/*.vue"],
+	"include": ["src/**/*.js", "src/**/*.vue","src/**/**/*.vue","src/**/**/*.js"],
 }
