--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-3090620231104002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3090620231104002",
     "@dcloudio/uni-ui": "^1.4.28",
+    "axios": "^1.6.2",
     "pinia": "2.0.27",
     "vue": "^3.3.8",
     "vue-i18n": "^9.1.9"
